--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
     <script>/* add script*/</script>
-=======
-    <h1>/* title */</h1>
->>>>>>> refs/remotes/main/main
+    <h1>/*title*/</h1>
+    <div></div>
 </body>
 </html>
